# QMeans

./: .gitignore  KMeans_file.py  QLM_connect.py  Quantum K-Means Algorithm.ipynb  Readme.md  boyer_exponential_search.py  classical_utils.py  dataset.py  datasets.py  delta_KMeans.py  graphics.py  grover.py  main.py  minimum_search_oracle.py  pyproject.toml  quantum_compute_max_list.py  quantum_compute_min_list.py  quantum_utils.py  quantum_utils_CLOUD.py  quantum_utils_QLM.py  requirements.txt  utils.py
KMeans_code/: KMeans_file.py  delta_KMeans.py  main_classical.py
QMeans_code/: main.py  main_quantum.py  my_qmeans.py
