[project]
name = "qmeans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "fastdist>=1.1.6",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "qat>=1.6.1",
    "qiskit>=2.2.3",
    "qiskit-ibm-runtime>=0.43.1",
    "qiskit-ionq>=1.0.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]
